--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,14 +1,30 @@
 {% extends 'blog/base.html' %}
 
+    
+
     {% block content %}
+       
         <div class="post">
+            
             {% if post.published_date %}
+                
                 <div class="date">
+                    
                     {{ post.published_date }}
+               
                 </div>
+            
             {% endif %}
-            <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+ 
+                <div >
+                   {% if post.article_image %}
+                        <img src="{{MEDIA_URL}}{{post.article_image.url}}">
+                   {% endif %}
+                </div>           
             <h1>{{ post.title }}</h1>
+           
             <p>{{ post.text|linebreaksbr }}</p>
+        
         </div>
+    
     {% endblock %}
