--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,30 +1,19 @@
 {% extends 'blog/base.html' %}
 
-    
-
-    {% block content %}
-       
+{% block content %}
         <div class="post">
-            
             {% if post.published_date %}
-                
                 <div class="date">
-                    
                     {{ post.published_date }}
-               
                 </div>
-            
             {% endif %}
- 
-                <div >
+               <div >
                    {% if post.article_image %}
                         <img src="{{MEDIA_URL}}{{post.article_image.url}}">
                    {% endif %}
-                </div>           
+                </div>
+            <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
             <h1>{{ post.title }}</h1>
-           
             <p>{{ post.text|linebreaksbr }}</p>
-        
         </div>
-    
-    {% endblock %}
+{% endblock %}
